[FIX] point_of_sale: Fix small layout issues
Fix small layout issues:
 - On the scale screen, the product and computed prices were too large
   and not displayed correctly, hiding part of the Order button.
 - The icon in the proxy status was not displayed next to the text but
   on the next line, partly hidden.
 - The proxy status takes too much space on small devices, we hide the
   text and show only the icon on mobile.

closes odoo/odoo#55259

X-original-commit: 9d81e9d376751bf971733475ce241821f38352f8

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -1772,7 +1772,7 @@ td {
     margin: 16px;
     text-align: center;
     display: inline-block;
-    width: 40%;
+    width: 35%;
 }
 .pos .scale-screen .computed-price{
     font-size: 25px;
@@ -1782,7 +1782,7 @@ td {
     margin-top: 0px;
     padding: 16px;
     background: white;
-    width: 40%;
+    width: 35%;
     border-radius: 3px;
     font-family: Inconsolata;
     font-weight: bold;
